# thrift_dispatcher

./: CMakeLists.txt  LICENSE  README.md
example/: CMakeLists.txt  client_main.cpp  example.thrift  server_handler.h  server_main.cpp
example/gen-cpp/: Example.cpp  Example.h  Example_server.skeleton.cpp  example_constants.cpp  example_constants.h  example_types.cpp  example_types.h
thrift_dispatcher/: CMakeLists.txt  executor.h  executors.h  function_traits.h  net_point.h  thrift_client.h  thrift_clients.h  thrift_server.h
